# chip8emu

./: .gitignore  CMakeLists.txt  beep.py  chip8core.cpp  chip8core.h  fontset.h  launcher.py  main.cpp  screen.cpp  screen.h  sound.cpp  sound.h
